Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.0.0
-
None
-
-
f50e94601 (dev), 47a9acb7c (6.8), 347c120af (6.7), 508d624ca (tqtc/lts-6.5)
Description
Playback a video with the qml-"mediaplayer" example (using ffmpeg backend!) on some Android device causes performance issues and log spam on each frame:
SPAM: W Adreno-ES20: <core_glTexParameteriv:406>: GL_INVALID_ENUM W OpenGLRenderer: [SurfaceTexture-0-32749-0] bindTextureImage: clearing GL error: 0x500
I got this with two different devices:
armv7 device having: OpenGL VENDOR: Qualcomm RENDERER: Adreno (TM) 306 VERSION: OpenGL ES 3.0 V@145.0 AU@ (GIT@I38fdb1353f)
arm64-v8a: OpenGL VENDOR: ARM RENDERER: Mali-G71 MP2 VERSION: OpenGL ES 3.2 v1.r20p0-01rel0.4c6d55619f9f1f92ee8846114f879226
I attached a patch that fixes this issue:
void QRhiGles2::bindCombinedSampler(...):
- if (caps.texture3D)
+ if (texD->target == GL_TEXTURE_3D)
f->glTexParameteri(texD->target, GL_TEXTURE_WRAP_R, GLint(samplerD->d.glwrapr));
Attachments
Issue Links
- relates to
-
QTBUG-117665 [DeclarativeCamera] Recording and viewing the video multiple times causes the app to crash
-
- Reported
-
-
QTBUG-115503 QML MediaPlayer is not able to render video from qrc on Android.
-
- Closed
-
For Gerrit Dashboard: QTBUG-126012 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
565387,2 | rhi: gl: Only set WRAP_R for 3D textures | dev | qt/qtbase | Status: MERGED | +2 | 0 |
566280,2 | rhi: gl: Only set WRAP_R for 3D textures | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |
566329,2 | rhi: gl: Only set WRAP_R for 3D textures | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |
578418,2 | rhi: gl: Only set WRAP_R for 3D textures | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
578539,1 | rhi: gl: Only set WRAP_R for 3D textures | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: ABANDONED | 0 | 0 |