rhi: gl: Only set WRAP_R for 3D textures

It is not clear why an OpenGL implementation would reject
(with INVALID_ENUM) the setting of GL_TEXTURE_WRAP_R
(as making it an error makes no sense and not in the spec
either), but the most likely interpretation of the
associated report is that some Adreno-based Android devices
do that.

So instead of just testing if we are >= ES 3.0, also check
the texture target before setting WRAP_R.

Pick-to: 6.6 6.5 6.2
Fixes: QTBUG-126012
Change-Id: I0fe1cd71b9fd74748f7bae78030c41ca972932b5
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
(cherry picked from commit f50e946012553771190addbca7deeb498ac992b3)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 47a9acb7cf06df344192120a5ed7708644b83441)